// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TodoForm > サーバーのバリデーションエラーを表示する > form 1`] = `
[
  {
    "ariaLabel": "",
    "disabled": false,
    "kind": "input",
    "name": "name",
    "placeholder": "",
    "readOnly": false,
    "required": false,
    "type": "text",
    "value": "タスクB",
  },
  {
    "ariaLabel": "",
    "disabled": false,
    "kind": "input",
    "name": "detail",
    "placeholder": "",
    "readOnly": false,
    "required": false,
    "type": "text",
    "value": "",
  },
  {
    "disabled": false,
    "kind": "select",
    "name": "recurrenceType",
    "options": [
      {
        "selected": true,
        "text": "なし",
        "value": "none",
      },
      {
        "selected": false,
        "text": "毎日",
        "value": "daily",
      },
      {
        "selected": false,
        "text": "毎週",
        "value": "weekly",
      },
      {
        "selected": false,
        "text": "毎月",
        "value": "monthly",
      },
    ],
    "required": false,
    "value": "none",
  },
  {
    "ariaLabel": "",
    "disabled": false,
    "kind": "input",
    "name": "dueDate",
    "placeholder": "",
    "readOnly": false,
    "required": false,
    "type": "date",
    "value": "",
  },
  {
    "ariaLabel": "",
    "disabled": false,
    "kind": "button",
    "textContent": "Submit",
    "type": "submit",
  },
]
`;

exports[`TodoForm > サーバーのバリデーションエラーを表示する > text 1`] = `"Add Todo Task Detail Recurrence なし 毎日 毎週 毎月 Due Date 期限の形式が正しくありません Submit"`;

exports[`TodoForm > 入力して送信するとonSubmitへ正規化された値を渡し、成功時にフォームを初期化する > form 1`] = `
[
  {
    "ariaLabel": "",
    "disabled": false,
    "kind": "input",
    "name": "name",
    "placeholder": "",
    "readOnly": false,
    "required": false,
    "type": "text",
    "value": "",
  },
  {
    "ariaLabel": "",
    "disabled": false,
    "kind": "input",
    "name": "detail",
    "placeholder": "",
    "readOnly": false,
    "required": false,
    "type": "text",
    "value": "",
  },
  {
    "disabled": false,
    "kind": "select",
    "name": "recurrenceType",
    "options": [
      {
        "selected": true,
        "text": "なし",
        "value": "none",
      },
      {
        "selected": false,
        "text": "毎日",
        "value": "daily",
      },
      {
        "selected": false,
        "text": "毎週",
        "value": "weekly",
      },
      {
        "selected": false,
        "text": "毎月",
        "value": "monthly",
      },
    ],
    "required": false,
    "value": "none",
  },
  {
    "ariaLabel": "",
    "disabled": false,
    "kind": "input",
    "name": "dueDate",
    "placeholder": "",
    "readOnly": false,
    "required": false,
    "type": "date",
    "value": "",
  },
  {
    "ariaLabel": "",
    "disabled": false,
    "kind": "button",
    "textContent": "Submit",
    "type": "submit",
  },
]
`;

exports[`TodoForm > 入力して送信するとonSubmitへ正規化された値を渡し、成功時にフォームを初期化する > text 1`] = `"Add Todo Task Detail Recurrence なし 毎日 毎週 毎月 Due Date Submit"`;
